--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .swiper {
@@ -9,6 +9,13 @@
 }
 
 .image {
+  position: absolute;
   width: 100%;
   height: 100%;
+}
+
+.image-box {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
 }
