--- a/style.css
+++ b/style.css
@@ -19,3 +19,13 @@
   width: 100%;
   padding-bottom: 56.25%;
 }
+
+.btn {
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  width: 30px;
+  height: 30px;
+  background-color: rgba(000, 000, 000, 0.3);
+  z-index: 99;
+}
